Fix overflow home page

--- a/water-paint-web/src/Pages/store/Home/Home.module.scss
+++ b/water-paint-web/src/Pages/store/Home/Home.module.scss
@@ -1,10 +1,12 @@
 .introductionWrapper {
     position: relative;
+    overflow: hidden;
     &::before {
         position: absolute;
         content: url('../../../assets/images/IntroductionFooterImage.png');
         bottom: 0;
-        left: 0;
+        left: 50%;
+        transform: translateX(-50%);
         z-index: -1;
     }
 }
